[project]
name = "agent-framework-hosting-sample-local-telegram"
version = "0.0.1"
description = "Telegram-only hosting sample with a @tool, FileHistoryProvider, and slash commands."
requires-python = ">=3.10"
dependencies = [
    "agent-framework-foundry",
    "agent-framework-hosting",
    "agent-framework-hosting-telegram",
    "azure-identity",
    "aiohttp>=3.13.5",
    "hypercorn>=0.17",
    "httpx>=0.27",
]

[tool.uv]
package = false

[tool.uv.sources]
agent-framework-hosting = { git = "https://github.com/microsoft/agent-framework.git", branch = "main", subdirectory = "python/packages/hosting" }
agent-framework-hosting-telegram = { git = "https://github.com/microsoft/agent-framework.git", branch = "main", subdirectory = "python/packages/hosting-telegram" }
